# distributed_systems_t2

./: .gitignore  Dockerfile  README.md  backup  docker-compose.yml  main.py  pyproject.toml
cadeia/adapters/: cd_controller.py  factory_controller.py  solutions.py  store_controller.py  strategies.py
cadeia/app/cd/: requests.py  responses.py  strategies.py  use_cases.py
cadeia/app/factory/: requests.py  responses.py  strategies.py  use_cases.py
cadeia/app/store/: requests.py  responses.py  strategies.py  use_cases.py
cadeia/app/store/tests/: conftest.py  test_credit_store_use_case.py  test_debit_store_use_case.py
cadeia/domain/: entities.py
cadeia/main/: factories.py
